Fixed SCSS : I  removed the :hover on header links to make way for a permanent box-shadow. Card component text now stops in the middle of the Card and wraps. + With JS : in the Home component, partout et ailleurs wraps in the mobile version.

--- a/my-react-app/src/components/Card/Card.scss
+++ b/my-react-app/src/components/Card/Card.scss
@@ -19,6 +19,10 @@
     left: 10px;
     color: white;
     font-size: 1rem;
+    width: 50%;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
   }
 
   :hover {
