--- a/my-react-app/src/components/Footer/Footer.scss
+++ b/my-react-app/src/components/Footer/Footer.scss
@@ -21,7 +21,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 740px) {
   footer {
     padding: 40px 0;
 
