--- a/my-react-app/src/components/Header/Header.scss
+++ b/my-react-app/src/components/Header/Header.scss
@@ -27,14 +27,11 @@ header {
     color: #000;
     text-decoration: none;
     font-weight: normal;
-  }
-
-  a:hover {
     box-shadow: 0 2px 0 #000;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 740px) {
   header {
     margin: 10px 0;
     padding: 0px 15px;
