--- a/my-react-app/src/pages/About.scss
+++ b/my-react-app/src/pages/About.scss
@@ -45,7 +45,7 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 740px) {
   .about {
     padding: 0px 20px;
   }
