--- a/my-react-app/src/pages/Logement.scss
+++ b/my-react-app/src/pages/Logement.scss
@@ -168,12 +168,12 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 740px) {
   .logement {
     padding: 0px 20px;
   }
 
-  .wrapper {
+  .slider {
     height: 200px;
 
     button {
