--- a/my-react-app/src/pages/NotFound.scss
+++ b/my-react-app/src/pages/NotFound.scss
@@ -33,7 +33,7 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 740px) {
   .not-found {
     text-align: center;
 
